feat: about section with image follow cursor

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -2,34 +2,42 @@
 
   <app-menu></app-menu>
 
-  <section class="description">
-    <img class="avatar" src="/assets/img/Avatar.svg" alt="">
-    <p></p>
+  <section #description class="description">
+    <img #avatar class="avatar" src="/assets/img/photos/profile-pic.png" alt="">
+    <!-- <div #avatar class="avatar"></div> -->
+    <p>Il y a quelques années, complètement par hasard, j'ai ouvert une toute petite porte d'un univers immense et passionnant : j'ai découvert le <span>développement web</span> et j'ai tout de suite accroché.<br>
+      Et pas seulement avec le code, mais avec la <span>création web</span> dans son ensemble.<br>
+      J'ai adoré pouvoir allier création et logique, chercher des solutions et résoudre des problématiques, comprendre le fonctionnement de cet outil si familier qu'est le net.<br>
+      J’ai passé ces dernières années à coder mes premiers sites juste par plaisir, à étudier la <span>rédaction web SEO</span>, à m’intéresser à  l'<span>UX</span>, au <span>design</span>, et enfin à passer une certification en développement web.<br>
+      Me voilà désormais reconvertie en développeuse web fullstack, ravie d'en apprendre un peu plus tous les jours, et surtout avec un gros coup de 🧡 pour la partie front-end.<br>
+      Mes outils principaux : <strong>Angular</strong>, <strong>Typescript</strong> et <strong>SCSS</strong>.</p>
   </section>
 
-  <section class="softSkills">
-    <h3>MES SOFT SKILLS</h3>
-    <ul>
-      <li>Autonomie</li>
-      <li>Rigueur</li>
-      <li>Curiosité</li>
-      <li>Esprit d'équipe</li>
-      <li>Et beaucoup d'optimisme 🙂</li>
-    </ul>
+  <section id="moreInfo">
 
+    <div class="softSkills">
+      <h3>MES SOFT SKILLS</h3>
+      <ul>
+        <li>Autonomie</li>
+        <li>Rigueur</li>
+        <li>Curiosité</li>
+        <li>Esprit d'équipe</li>
+        <li>Et beaucoup d'optimisme 🙂</li>
+      </ul>
+    </div>
+
+    <div class="leisure">
+      <h3>WHAT ELSE ?</h3>
+      <ul>
+        <li>J’écoute de la musique, tout le temps</li>
+        <li>Je joue, souvent</li>
+        <li>Je fais du yoga, assidûment</li>
+        <li>J’évalue des projets pour Time For The Planet, régulièrement</li>
+      </ul>
+
+    </div>
   </section>
 
-  <section class="leisure">
-    <h3>WHAT ELSE ?</h3>
-
-    <p>
-      J’écoute de la musique, tout le temps<br>
-      Je joue, souvent<br>
-      Je fais du yoga, assidûment<br>
-      J’évalue des projets pour Time For The Planet, régulièrement
-    </p>
-
-  </section>
 
   <section class="resume">
     <!-- <div class="experience">
