--- a/src/app/shared/menu/menu.component.html
+++ b/src/app/shared/menu/menu.component.html
@@ -1,16 +1,18 @@
 <div id="menu">
 
-  <!-- <input type="checkbox" id="menuCheckbox">
+  <input type="checkbox" id="menuCheckbox">
   <label for="menuCheckbox" id="menuIcon">
     <span class="line"></span>
   </label>
 
+  <div class="menuBackground"></div>
+
   <nav>
     <ul>
-      <li>Accueil</li>
-      <li>Portfolio</li>
-      <li>En savoir plus</li>
+      <li><a routerLink="" routerLinkActive="router-link-active" [routerLinkActiveOptions]="{exact: true}">Accueil</a></li>
+      <li><a routerLink="/portfolio" routerLinkActive="router-link-active" [routerLinkActiveOptions]="{exact: true}">Portfolio</a></li>
+      <li><a routerLink="/about" routerLinkActive="router-link-active" [routerLinkActiveOptions]="{exact: true}">Plus d'infos</a></li>
     </ul>
-  </nav> -->
+  </nav>
 
 </div>
