--- a/src/styles.scss
+++ b/src/styles.scss
@@ -9,7 +9,7 @@ $color-primary: #0B3948;
 // $color-secondary: #e6937d;
 $color-secondary: #dc5a37;
 
-$font-text: 'Mulish', sans-serif;
+$font-text: 'Montserrat', sans-serif;
 $font-titles: 'Poiret One', cursive;
 
 body {
