--- a/src/app/shared/menu/menu.component.scss
+++ b/src/app/shared/menu/menu.component.scss
@@ -1,29 +1,94 @@
+@import "./../../../styles.scss";
+
+$animationTime: 0.7s;
+
+:host {
+  position: relative;
+}
+
 #menu {
-  width: 50px;
-  height: 50px;
+  width: 100vw;
+  height: 100vh;
   border-radius: 50%;
   position: absolute;
-  top: 5%;
-  left: 5%;
+  top: 0;
+  left: 0;
 
   input#menuCheckbox {
     display: none;
+
+    &:checked ~ .menuBackground {
+      transform: scale(100);
+    }
+    &:checked ~ nav {
+      animation: menuAnimation $animationTime/2 forwards ease-in-out;
+    }
+    &:checked ~ label#menuIcon {
+      span {
+        background-color: #242432;
+        &::before {
+          animation: menuIconAnimationTop $animationTime forwards ease-in-out;
+        }
+        &::after {
+          animation: menuIconAnimationBottom $animationTime forwards ease-in-out;
+        }
+      }
+    }
+    &:not(:checked) ~ label#menuIcon {
+      span {
+        &::before {
+          animation: menuIconAnimationTopBack $animationTime forwards ease-in-out;
+        }
+        &::after {
+          animation: menuIconAnimationBottomBack $animationTime forwards ease-in-out;
+        }
+      }
+    }
   }
+  @keyframes menuIconAnimationTop {
+    0% { top: -7px; transform: rotate(0); }
+    50% { top: 0; transform: rotate(0); }
+    100% { top: 0; transform: rotate(45deg); }
+  }
+  @keyframes menuIconAnimationTopBack {
+    0% { top: 0;transform: rotate(45deg); }
+    50% { top: 0; transform: rotate(0); }
+    100% { top: -7px; transform: rotate(0); }
+  }
+  @keyframes menuIconAnimationBottom {
+    0% { top: 7px; transform: rotate(0); }
+    50% { top: 0; transform: rotate(0); }
+    100% { top: 0; transform: rotate(-45deg); }
+  }
+  @keyframes menuIconAnimationBottomBack {
+    0% { top: 0; transform: rotate(-45deg); }
+    50% { top: 0; transform: rotate(0); }
+    100% { top: 7px; transform: rotate(0); }
+  }
+
   label#menuIcon {
-    width: 100%;
-    height: 100%;
+    z-index: 5;
+    position: absolute;
+    top: 5%;
+    left: 5%;
+    width: 50px;
+    height: 50px;
     border-radius: 50%;
-    background-color: darkmagenta;
+    background-color: #242432;
+    box-shadow: 0px 0px 15px #7e6a84;
     display: flex;
     justify-content: center;
     align-items: center;
     cursor: pointer;
+    opacity: 0;
+    animation: showMenuAnimation 0.15s $animationTime ease-in-out forwards;
 
     span.line {
       width: 50%;
       height: 2px;
       background-color: white;
       position: relative;
+      transition: all $animationTime/2 ease-in-out;
     }
     span.line::before, span.line::after {
       content: "";
@@ -33,10 +98,84 @@
       top: -7px;
       position: absolute;
       background-color: floralwhite;
+      transform: rotate(0);
     }
     span.line::after {
       top: 7px;
     }
 
+  }
+  @keyframes showMenuAnimation {
+    100% {
+      opacity: 1;
+    }
+  }
+
+  .menuBackground {
+    width: 50px;
+    height: 50px;
+    position: absolute;
+    top: 5%;
+    left: 5%;
+    z-index: 3;
+    border-radius: 50%;
+    background-image: linear-gradient(to right bottom, #e96443 33%, #904e95 80%);
+    opacity: 0;
+    animation: showMenuAnimation 0.2s $animationTime ease-in-out forwards;
+
+    transition: transform $animationTime/2 ease-in-out;
+  }
+
+  nav {
+    position: absolute;
+    z-index: 4;
+
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    opacity: 0;
+    transform: scale(0);
+    // transition: transform 0.5s ease-in-out, opacity 0.2s 0.5s ease-in;
+    ul {
+      height: 100%;
+      display: flex;
+      flex-direction: column;
+      justify-content: space-around;
+
+      li {
+        list-style: none;
+        text-transform: uppercase;
+        font-size: 6rem;
+        cursor: pointer;
+
+        a {
+          text-decoration: none;
+          color: white;
+          font-family: $font-titles;
+          &.router-link-active {
+            color: #e49ea2;
+            cursor: default;
+            letter-spacing: 0.8rem;
+          }
+        }
+      }
+    }
+  }
+  @keyframes menuAnimation {
+    0% {
+      opacity: 0;
+      transform: scale(0);
+    }
+    50% {
+      opacity: 0;
+      transform: scale(1);
+    }
+    100% {
+      opacity: 1;
+      transform: scale(1);
+    }
   }
 }
