design : responsive on all pages

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -11,7 +11,7 @@
     <div id="welcomeText">
       <h2><span>Bienvenue</span><br>sur mon portfolio !</h2>
       <p>Je suis developpeuse web, passionnée par le front-end<br>
-        Je réalise des sites responsive, en phase avec les normes d’accessibilité et performants.</p>
+        Je réalise des sites responsive et en phase avec les normes d’accessibilité.</p>
       <p>Laissez-moi vous présenter mes projets et vous en dire un peu plus sur moi</p>
 
       <div class="homeButtons">
