--- a/src/app/about/about.component.scss
+++ b/src/app/about/about.component.scss
@@ -13,7 +13,7 @@ section.description {
   position: relative;
   width: 100%;
   height: fit-content;
-  padding: 8vh 0 15vh;
+  padding: 8vh 0;
 
   .socialButtons {
     width: fit-content;
@@ -32,20 +32,6 @@ section.description {
     }
   }
 
-  .avatar {
-    position: absolute;
-    top: 100%;
-    left: 35%;
-    width: 300px;
-    opacity: 1;
-    pointer-events: none;
-    aspect-ratio: 1;
-    background-size: cover;
-    background-image: url('/assets/img/photos/profile-pic.png');
-
-    transition: all 0.5s ease-out;
-  }
-
   p {
     width: 60%;
     margin: 0 auto;
@@ -59,12 +45,27 @@ section.description {
   }
 }
 
+img.avatar {
+  width: 25vw;
+  aspect-ratio: 1;
+  margin: auto;
+  display: block;
+  // position: absolute;
+  // top: 100%;
+  // left: 35%;
+  // opacity: 1;
+  // background-size: cover;
+  // background-image: url('/assets/img/photos/profile-pic.png');
+  // pointer-events: none;
+  // transition: all 0.5s ease-out;
+}
+
 section#moreInfo {
   // display: flex;
   // justify-content: space-between;
   // align-items: center;
   // height: 300px;
-  margin: 50vh 30px 5vh;
+  margin: 5vh 30px 5vh;
   display: flex;
   flex-wrap: wrap;
 
