--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -1,7 +1,7 @@
 @import "./../../styles.scss";
 
 // $circleRayon: clamp(120vh, 120vmax, 50vw);
-$circleRayon: 110vh;
+// $circleRayon: 110vh;
 
 #home {
   width: 100vw;
@@ -17,34 +17,34 @@ $circleRayon: 110vh;
   background-size: cover;
   background-position: bottom;
 
-  #avatar {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%) scale(0);
+  // #avatar {
+  //   position: absolute;
+  //   top: 50%;
+  //   left: 50%;
+  //   transform: translate(-50%, -50%) scale(0);
 
-    img.avatarImg {
-      transform: scale(0);
-      width: clamp(400px, 28vw, 600px);
-      border-radius: 50%;
-      position: relative;
-    }
-    p {
-      opacity: 0;
-      width: max-content;
-      position: absolute;
-      font-family: 'Acme', sans-serif;
-      font-size: 85px;
-      color: floralwhite;
-      &.textHello {
-        left: -28%;
-      }
-      &.textWorld {
-        left: 70%;
-        bottom: 0;
-      }
-    }
-  }
+  //   img.avatarImg {
+  //     transform: scale(0);
+  //     width: clamp(400px, 28vw, 600px);
+  //     border-radius: 50%;
+  //     position: relative;
+  //   }
+  //   p {
+  //     opacity: 0;
+  //     width: max-content;
+  //     position: absolute;
+  //     font-family: 'Acme', sans-serif;
+  //     font-size: 85px;
+  //     color: floralwhite;
+  //     &.textHello {
+  //       left: -28%;
+  //     }
+  //     &.textWorld {
+  //       left: 70%;
+  //       bottom: 0;
+  //     }
+  //   }
+  // }
 
   #homePage {
     width: 100%;
@@ -55,12 +55,10 @@ $circleRayon: 110vh;
     justify-content: center;
     #welcomeText {
       // margin: 3%;
-      // width: 50%;
+      width: 50%;
       color: white;
-
-      width: 100%;
       position: relative;
-      left: 25%;
+      // left: 25%;
       z-index: 2;
       text-shadow: 2px 2px 10px black;
 
@@ -70,7 +68,7 @@ $circleRayon: 110vh;
         font-weight: 300;
         color: floralwhite;
         line-height: 1.2;
-        margin-bottom: 30px;
+        margin-bottom: 40px;
         span {
           font-weight: 600;
         }
@@ -85,6 +83,7 @@ $circleRayon: 110vh;
       .homeButtons {
         display: flex;
         margin-left: 10%;
+        // margin-top: 20px;
         .nav {
           width: fit-content;
           position: relative;
@@ -171,7 +170,6 @@ $circleRayon: 110vh;
       }
     }
     .img {
-      // width: 40%;
       position: relative;
       height: 100%;
 
@@ -202,7 +200,6 @@ $circleRayon: 110vh;
       position: relative;
       width: 65%;
       img {
-        // clip-path: polygon(50% 0%, 100% 30%, 100% 70%, 50% 100%, 0 70%, 0 30%);
         border-radius: 50%;
         object-fit: cover;
         position: absolute;
@@ -211,43 +208,26 @@ $circleRayon: 110vh;
           height: 65vmin;
           width: 65vmin;
           top: 20%;
-          // transform: translateY(-50%);
         }
         &.img2 {
-          // width: 35%;
-          // height: 40%;
-          // left: 57%;
-          // top: 1%;
           width: 30vmin;
           height: 30vmin;
           left: 62%;
           top: 7%;
         }
         &.img3 {
-          // width: 35%;
-          // height: 40%;
-          // left: 67%;
-          // top: 38%;
           width: 30vmin;
           height: 30vmin;
           left: 68%;
           top: 45%;
         }
         &.img4 {
-          // width: 35%;
-          // height: 40%;
-          // left: 52%;
-          // top: 73%;
           width: 30vmin;
           height: 30vmin;
           left: 57%;
           top: 81%;
         }
         &.img5 {
-          // width: 35%;
-          // height: 40%;
-          // left: 52%;
-          // top: 73%;
           width: 30vmin;
           height: 30vmin;
           left: 34%;
@@ -261,90 +241,3 @@ $circleRayon: 110vh;
 :is(.hidden) {
   display: none !important;
 }
-
-// .homeText {
-//   width: 30%;
-//   height: 100%;
-//   position: relative;
-//   .circle {
-//     width: $circleRayon;
-//     height: $circleRayon;
-//     border-radius: 0 50% 50% 0;
-//     background: $color-primary;
-//     position: absolute;
-//     left: -7vw;
-//     top: 50%;
-//     transform: translateY(-50%);
-//     box-shadow: inset 40px 0px 40px 50px rgb(0 0 0 / 38%);
-//     .text {
-//       height: fit-content;
-//       width: 65%;
-//       margin: auto;
-//       position: absolute;
-//       top: 50%;
-//       left: 55%;
-//       transform: translate(-50%, -50%);
-//       color: floralwhite;
-//       font-family: 'Poiret One', cursive;
-//       font-size: 35px;
-//       p {
-//         vertical-align: baseline;
-//         margin: 15px 0;
-//         overflow: hidden;
-//         span {
-//           display: inline-block;
-//           // transform: translateY(100%);
-//           transition: transform 1s;
-//         }
-//       }
-//       button {
-//         font-size: 30px;
-//         padding: 3px 8px;
-//         background-color: $color-secondary;
-//         opacity: 1;
-//         color: floralwhite;
-//         outline: none;
-//         border: none;
-//         transform: translate(50%, 30px) rotate(-4deg);
-//         cursor: pointer;
-//         span {
-//           display: inline-block;
-//           transform: rotate(4deg);
-//         }
-//         &::before {
-//           content: "";
-//           width: 100%;
-//           height: 100%;
-//           background-color: $color-secondary;
-//           opacity: 0.5;
-//           transform: translate(4px,4px);
-//           position: absolute;
-//           inset: 0;
-//         }
-//         &:active {
-//           transform: translate(50%,36px) rotate(-4deg);
-//           opacity: 0.8;
-//           &::before {
-//             transform: translate(0,0);
-//           }
-//         }
-//       }
-//     }
-//   }
-// }
-
-// .homeImg {
-//   width: 70%;
-//   height: 100%;
-//   .img {
-//     background: url("./../../assets/img/image.jpg");
-//     width: 100%;
-//     height: 100%;
-//     background-position: center;
-//     background-size: cover;
-//     background-repeat: no-repeat;
-//     // position: absolute;
-//     // top: 0;
-//     // right: 0;
-//   }
-// }
