--- a/src/app/projects/projects.component.scss
+++ b/src/app/projects/projects.component.scss
@@ -9,21 +9,24 @@
 
 section#projectsHero {
   width: 100vw;
-  height: 100vh;
+  height: clamp(500px, 100vw, 100vh);
   display: flex;
   justify-content: center;
   align-items: center;
   background: url("/assets/img/PatternT.svg"), #242432;
   background-attachment: fixed;
   img {
+    max-width: 100vw;
+    height: inherit;
     max-height: 100%;
+    object-fit: cover;
     position: absolute;
     z-index: 1;
     filter: opacity(0.5);
   }
   h2 {
     text-align: center;
-    font-size: 15rem;
+    font-size: clamp(16px, 15vw, 400px);
     font-weight: 100;
     color: white;
     text-transform: uppercase;
@@ -200,32 +203,77 @@ section#listOfProjects {
           }
         }
       }
+      .cardButtonsSmallScreens {
+        display: none;
+      }
     }
 
-    &:hover {
+    // &:hover {
+    //   .cardText {
+    //     transform: rotateY(-20deg);
+    //     &::before {
+    //       opacity: 0.2;
+    //     }
+    //     .projectLinks {
+    //       transform: translateY(-20%) translateX(-7%);
+    //       text-shadow: -3px 3px 8px #818181;
+    //     }
+    //     .devCategory {
+    //       transform: translateX(-7%);
+    //     }
+    //     .cardButtons {
+    //       transform: translateX(0%);
+    //       opacity: 1;
+    //     }
+    //   }
+    //   .projectsImg {
+    //     transform: rotateY(20deg);
+    //     box-shadow: 3px 2px 6px 2px #b3b6bb;
+    //   }
+    // }
+
+  }
+  @media (hover: hover) {
+    .projectCard:hover {
       .cardText {
         transform: rotateY(-20deg);
         &::before {
           opacity: 0.2;
-        }
-        .projectLinks {
-          transform: translateY(-20%) translateX(-7%);
-          text-shadow: -3px 3px 8px #818181;
-        }
-        .devCategory {
-          transform: translateX(-7%);
-        }
-        .cardButtons {
-          transform: translateX(0%);
+      }
+      .projectLinks {
+        transform: translateY(-20%) translateX(-7%);
+        text-shadow: -3px 3px 8px #818181;
+      }
+      .devCategory {
+        transform: translateX(-7%);
+      }
+      .cardButtons {
+        transform: translateX(0%);
+        opacity: 1;
+      }
+    }
+    .projectsImg {
+      transform: rotateY(20deg);
+      box-shadow: 3px 2px 6px 2px #b3b6bb;
+    }
+
+    button.projectButtons:hover {
+      &:hover {
+        transform: translateX(-150px);
+      &:last-of-type {
+        border-radius: 10px 0 0 10px;
+      }
+      span.text {
+        transform: scaleX(3);
+        &::before {
+          transform: translate(-50%, -50%) scaleX(0.3);
           opacity: 1;
         }
       }
-      .projectsImg {
-        transform: rotateY(20deg);
-        box-shadow: 3px 2px 6px 2px #b3b6bb;
-      }
+    }
     }
   }
+}
 
   #infoPortfolio {
     width: 100%;
@@ -239,6 +287,69 @@ section#listOfProjects {
       // background-image: linear-gradient(to right, #e96443, #904e95 65%);
       // color: white;
       background-color: #d9d9de;
+    }
+  }
+}
+
+@media screen and (max-width: 1023px) {
+  section#listOfProjects {
+    padding-top: 10vh;
+    .projectCard {
+      height: fit-content;
+      flex-direction: column;
+      margin-bottom: clamp(400px, 50vh, 500px);
+      img.projectsImg {
+        width: 75%;
+        box-shadow: none;
+      }
+      .cardText {
+        justify-content: space-around;
+        gap: 30px;
+        width: 60%;
+        min-width: 280px;
+        min-height: 350px;
+        height: fit-content;
+        padding: 5%;
+        position: absolute;
+        top: 80%;
+        z-index: 3;
+        background: whitesmoke;
+        box-shadow: rgb(0 0 0 / 20%) 0px 10px 50px 10px;
+        border-radius: 16px;
+        .projectLinks {
+          transform: none;
+          text-align: center;
+          font-size: clamp(1vw, 5rem, 9vw);
+          white-space: nowrap;
+        }
+
+        .cardButtons {
+          display: none;
+        }
+        .cardButtonsSmallScreens {
+          display: flex;
+          gap: 20px;
+          flex-wrap: wrap;
+          justify-content: center;
+          button.projectButtons {
+            margin: 0 20px;
+            border-radius: 16px;
+            padding: 12px 24px;
+            outline: none;
+            border: none;
+            font-size: 1rem;
+            background-image: linear-gradient(to right, #e96443, #904e95 65%);
+            box-shadow: inset -9px -14px 20px #7a427f, inset 9px 7px 20px #e4826c;
+            color: white;
+            text-transform: uppercase;
+            // font-family: "Mulish", sans-serif;
+            a {
+              text-decoration: none;
+              color: white;
+            }
+          }
+        }
+      }
     }
   }
 }
