design review for responsive

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -38,8 +38,8 @@
       </div>
       <ul>
         <li>J’écoute de la musique, tout le temps</li>
-        <li>Je joue, souvent</li>
-        <li>Je fais du yoga, assidûment</li>
+        <li>Je fais du yoga, souvent</li>
+        <li>Je joue, fréquemment</li>
         <li>J’évalue des projets pour Time For The Planet, régulièrement</li>
       </ul>
 
