--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -1,7 +1,5 @@
 @import "./../../styles.scss";
 
-// $circleRayon: clamp(120vh, 120vmax, 50vw);
-// $circleRayon: 110vh;
 
 #home {
   width: 100vw;
@@ -17,35 +15,6 @@
   background-size: cover;
   background-position: bottom;
 
-  // #avatar {
-  //   position: absolute;
-  //   top: 50%;
-  //   left: 50%;
-  //   transform: translate(-50%, -50%) scale(0);
-
-  //   img.avatarImg {
-  //     transform: scale(0);
-  //     width: clamp(400px, 28vw, 600px);
-  //     border-radius: 50%;
-  //     position: relative;
-  //   }
-  //   p {
-  //     opacity: 0;
-  //     width: max-content;
-  //     position: absolute;
-  //     font-family: 'Acme', sans-serif;
-  //     font-size: 85px;
-  //     color: floralwhite;
-  //     &.textHello {
-  //       left: -28%;
-  //     }
-  //     &.textWorld {
-  //       left: 70%;
-  //       bottom: 0;
-  //     }
-  //   }
-  // }
-
   #homePage {
     width: 100%;
     height: 100%;
@@ -54,11 +23,9 @@
 
     justify-content: center;
     #welcomeText {
-      // margin: 3%;
-      width: 50%;
+      width: fit-content;
       color: white;
       position: relative;
-      // left: 25%;
       z-index: 2;
       text-shadow: 2px 2px 10px black;
 
@@ -77,7 +44,7 @@
         color: whitesmoke;
         line-height: 2;
 
-        font-size: 1.1rem;
+        font-size: 1.2rem;
         font-weight: 600;
       }
       .homeButtons {
