--- a/src/app/projects/projects.component.scss
+++ b/src/app/projects/projects.component.scss
@@ -292,36 +292,53 @@ section#listOfProjects {
   }
 }
 
-@media screen and (max-width: 1023px) {
+
+
+@media screen and (max-width: 900px) {
   section#listOfProjects {
     padding-top: 10vh;
     .projectCard {
       height: fit-content;
       flex-direction: column;
-      margin-bottom: clamp(400px, 50vh, 500px);
+      // margin-bottom: clamp(400px, 50vh, 500px);
+      margin-bottom: clamp(100px, 10vh, 500px);
       img.projectsImg {
         width: 75%;
         box-shadow: none;
+        position: absolute;
+        top: 15px;
       }
       .cardText {
         justify-content: space-around;
         gap: 30px;
-        width: 60%;
+        width: 80%;
         min-width: 280px;
-        min-height: 350px;
+        min-height: 560px;
         height: fit-content;
-        padding: 5%;
-        position: absolute;
+        padding: 5% 0;
+        // position: absolute;
         top: 80%;
-        z-index: 3;
+        // z-index: 3;
         background: whitesmoke;
         box-shadow: rgb(0 0 0 / 20%) 0px 10px 50px 10px;
         border-radius: 16px;
-        .projectLinks {
+        a.projectLinks {
           transform: none;
           text-align: center;
-          font-size: clamp(1vw, 5rem, 9vw);
+          font-size: clamp(1vw, 5rem, 13vw);
           white-space: nowrap;
+          margin-top: clamp(200px, 70vw, 500px);
+        }
+        .devCategory {
+          width: 100%;
+          background-color: #242432;
+          padding: 10%;
+          margin: 4% 0;
+          span {
+            font-size: clamp(12px, 4vw, 18px);
+            color: #242432;
+            background: white;
+          }
         }
 
         .cardButtons {
@@ -332,13 +349,14 @@ section#listOfProjects {
           gap: 20px;
           flex-wrap: wrap;
           justify-content: center;
+          margin-bottom: 6%;
           button.projectButtons {
             margin: 0 20px;
             border-radius: 16px;
             padding: 12px 24px;
             outline: none;
             border: none;
-            font-size: 0.75rem;
+            font-size: clamp(12px, 4vw, 18px);
             background-image: linear-gradient(to right, #e96443, #904e95 65%);
             box-shadow: inset -9px -14px 20px #7a427f, inset 9px 7px 20px #e4826c;
             color: white;
