--- a/src/app/projects/projects.component.scss
+++ b/src/app/projects/projects.component.scss
@@ -1,3 +1,5 @@
+@import "./../../styles.scss";
+
 :host {
   width: 100%;
   min-height: 100vh;
@@ -13,7 +15,7 @@ section#projectsHero {
   display: flex;
   justify-content: center;
   align-items: center;
-  background: url("/assets/img/PatternT.svg"), #242432;
+  background: url("/assets/img/PatternT.svg"), $color-primary;
   background-attachment: fixed;
   img {
     max-width: 100vw;
@@ -84,11 +86,9 @@ section#listOfProjects {
       }
       .projectLinks {
         text-decoration: none;
-        color: #242432;
-        // color: white;
-        // font-family: 'Marcellus', serif;
+        color: $color-primary;
         font-family: 'Roboto Condensed', sans-serif;
-        font-size: 5rem;
+        font-size: 7rem;
         text-shadow: 1px 3px 8px #818181;
         transform: translateY(-40%);
         transition: all 0.4s ease-in-out;
@@ -100,8 +100,9 @@ section#listOfProjects {
         justify-content: center;
         gap: 10px;
         span {
-          background: #242432;
+          background: $color-primary;
           color: white;
+          font-size: 1.2rem;
           padding: 5px 15px;
           border-radius: 16px;
           transition: all 0.4s ease-in-out;
@@ -118,9 +119,9 @@ section#listOfProjects {
         button.projectButtons {
           border: none;
           outline: none;
-          font-size: 18px;
+          font-size: 1.8rem;
           padding: 10px;
-          color: #242432;
+          color: $color-primary;
           cursor: pointer;
           transform-origin: right;
           transition: all 0.4s ease-in-out;
@@ -142,7 +143,7 @@ section#listOfProjects {
           }
           span.material-icons {
             display: inline-block;
-            font-size: 28px;
+            font-size: 2.8rem;
             position: absolute;
             top: 50%;
             left: 50%;
@@ -181,7 +182,7 @@ section#listOfProjects {
               color: white;
               opacity: 0;
               transition: transform 0.3s ease-in-out, opacity 0.2s;
-              font-size: 0.8rem;
+              font-size: 1.1rem;
               font-weight: 600;
               letter-spacing: 1.1px;
               text-transform: uppercase;
@@ -207,30 +208,6 @@ section#listOfProjects {
         display: none;
       }
     }
-
-    // &:hover {
-    //   .cardText {
-    //     transform: rotateY(-20deg);
-    //     &::before {
-    //       opacity: 0.2;
-    //     }
-    //     .projectLinks {
-    //       transform: translateY(-20%) translateX(-7%);
-    //       text-shadow: -3px 3px 8px #818181;
-    //     }
-    //     .devCategory {
-    //       transform: translateX(-7%);
-    //     }
-    //     .cardButtons {
-    //       transform: translateX(0%);
-    //       opacity: 1;
-    //     }
-    //   }
-    //   .projectsImg {
-    //     transform: rotateY(20deg);
-    //     box-shadow: 3px 2px 6px 2px #b3b6bb;
-    //   }
-    // }
 
   }
   @media (hover: hover) {
@@ -285,8 +262,6 @@ section#listOfProjects {
       width: fit-content;
       padding: 25px 50px;
       border-radius: 10px 10px 0 0;
-      // background-image: linear-gradient(to right, #e96443, #904e95 65%);
-      // color: white;
       background-color: #d9d9de;
     }
   }
@@ -294,13 +269,12 @@ section#listOfProjects {
 
 
 
-@media screen and (max-width: 900px) {
+@media screen and (max-width: 800px) {
   section#listOfProjects {
     padding-top: 10vh;
     .projectCard {
       height: fit-content;
       flex-direction: column;
-      // margin-bottom: clamp(400px, 50vh, 500px);
       margin-bottom: clamp(100px, 10vh, 500px);
       img.projectsImg {
         width: 75%;
@@ -313,12 +287,10 @@ section#listOfProjects {
         gap: 30px;
         width: 80%;
         min-width: 280px;
-        min-height: 560px;
+        min-height: 500px;
         height: fit-content;
         padding: 5% 0;
-        // position: absolute;
         top: 80%;
-        // z-index: 3;
         background: whitesmoke;
         box-shadow: rgb(0 0 0 / 20%) 0px 10px 50px 10px;
         border-radius: 16px;
@@ -331,12 +303,11 @@ section#listOfProjects {
         }
         .devCategory {
           width: 100%;
-          background-color: #242432;
-          padding: 10%;
-          margin: 4% 0;
+          background-color: $color-primary;
+          padding: 8%;
           span {
-            font-size: clamp(12px, 4vw, 18px);
-            color: #242432;
+            font-size: clamp(12px, 3vw, 16px);
+            color: $color-primary;
             background: white;
           }
         }
@@ -345,23 +316,23 @@ section#listOfProjects {
           display: none;
         }
         .cardButtonsSmallScreens {
+          width: 90%;
           display: flex;
-          gap: 20px;
-          flex-wrap: wrap;
+          gap: 10px;
+          flex-wrap: nowrap;
           justify-content: center;
-          margin-bottom: 6%;
+          margin-bottom: 3%;
           button.projectButtons {
-            margin: 0 20px;
-            border-radius: 16px;
-            padding: 12px 24px;
+            width: 50%;
+            border-radius: 10px;
+            padding: 12px 20px;
             outline: none;
             border: none;
-            font-size: clamp(12px, 4vw, 18px);
+            font-size: clamp(12px, 3vw, 16px);
             background-image: linear-gradient(to right, #e96443, #904e95 65%);
             box-shadow: inset -9px -14px 20px #7a427f, inset 9px 7px 20px #e4826c;
             color: white;
             text-transform: uppercase;
-            // font-family: "Mulish", sans-serif;
             a {
               text-decoration: none;
               color: white;
