--- a/src/app/projects/projet/projet.component.scss
+++ b/src/app/projects/projet/projet.component.scss
@@ -2,10 +2,7 @@
 
 :host {
   display: block;
-  // background: $color-primary;
-  // background: #062029;
-  // background: black;
-  background: url("/assets/img/PatternT.svg"), #242432;
+  background: url("/assets/img/PatternT.svg"), $color-primary;
   background-attachment: fixed;
   color: floralwhite;
 }
@@ -23,12 +20,12 @@ button.close {
   color: floralwhite;
   border: none;
   outline: none;
-  background: #242432;
+  background: $color-primary;
   box-shadow: 0px 0px 8px 0px black;
   opacity: 0.4;
   transition: all 0.3s ease;
   span {
-    font-size: 35px;
+    font-size: 3.5rem;
     position: absolute;
     top: 50%;
     left: 50%;
@@ -65,6 +62,7 @@ a.linkToSite {
   box-shadow: inset -9px -14px 20px #7a427f, inset 9px 7px 20px #e4826c, 0px 0px 5px 0px #726f7f;
   border-radius: 25px;
   text-transform: uppercase;
+  font-size: 1.4rem;
   transition: transform 0.3s ease-in-out;
   &:hover {
     transform: scale(1.04);
@@ -88,7 +86,7 @@ section#hero {
     top: 6%;
     z-index: 10;
     font-family: $font-titles;
-    font-size: 130px;
+    font-size: 13rem;
     // color: #f59a82;
     color: floralwhite;
     text-shadow: 2px 4px 8px rgb(0 0 0 / 50%);
@@ -98,7 +96,7 @@ section#hero {
     z-index: 10;
     right: 10px;
     top: 46%;
-    font-size: 1.5rem;
+    font-size: 2rem;
     color: floralwhite;
     &::before {
       content: "";
@@ -159,9 +157,9 @@ section#tools {
       display: inline-block;
       margin: 15px;
       padding: 10px 20px;
-      font-size: 22px;
+      font-size: 2.2rem;
 
-      color: #242432;
+      color: $color-primary;
       background: #dfdfe9;
     }
   }
@@ -175,7 +173,7 @@ section#tools {
     position: relative;
 
     h3 {
-      font-size: clamp(20vw, 20rem, 26vw);
+      font-size: clamp(20vw, 23rem, 26vw);
       color: #333344;
       right: 2%;
       bottom: 25%;
@@ -186,6 +184,7 @@ section#tools {
       -webkit-background-clip: text;
       -webkit-text-fill-color: transparent;
       font-weight: 700;
+      font-size: 1.5rem;
       position: relative;
       z-index: 2;
     }
@@ -199,7 +198,7 @@ section#description {
       width: 60%;
       line-height: 2;
       white-space: pre-line;
-      font-size: 1.5rem;
+      font-size: 2.5rem;
       text-align: justify;
       font-family: 'Montserrat', sans-serif;
     }
@@ -221,7 +220,7 @@ section#siteImages {
     padding-bottom: 90px;
     h3 {
       position: relative;
-      font-size: clamp(30px, 7rem, 7vw);
+      font-size: clamp(30px, 10rem, 7vw);
       margin: 10% 10% 7% 7%;
       font-weight: 500;
     }
@@ -240,7 +239,7 @@ section#siteImages {
           background: transparent;
           span {
             padding: 15px;
-            font-size: 1.6rem;
+            font-size: 2.1rem;
             border-radius: 50%;
             background-image: linear-gradient(to right, #e96443 0%, #904e95 51%, #e96443 100%);
             box-shadow: inset -14px -17px 20px #7a427f, inset 15px 3px 15px #e4826c, 0px 0px 8px 0px #625f6f;
@@ -249,7 +248,7 @@ section#siteImages {
         }
       }
       span.count {
-        font-size: 1.5rem;
+        font-size: 2rem;
       }
     }
   }
@@ -279,12 +278,12 @@ section#objectives{
     margin-left: 5%;
   ul {
     position: relative;
-    width: 60%;
+    width: 60vw;
     margin-left: 30px;
     li {
       line-height: 1.6;
       white-space: pre-line;
-      font-size: 1.5rem;
+      font-size: 2rem;
       text-align: justify;
       font-family: 'Montserrat', sans-serif;
       margin: 10px;
@@ -314,17 +313,15 @@ section#responsive {
         background: linear-gradient(to right, #904e95 51%, #e96443 100%);
         box-shadow: 2px 2px 12px 2px #2e2e2e;
         position: absolute;
-        left: 20%;
+        left: 15%;
         top: 50%;
         z-index: 10;
         height: 45%;
         width: 100%;
         min-height: fit-content;
         min-width: fit-content;
-        // margin: 10%;
         font-family: 'Poiret One', sans-serif;
-        // font-size: 3.7rem;
-        font-size: clamp(18px, 3rem, 7vw);
+        font-size: clamp(18px, 5rem, 7vw);
         line-height: 1.3;
       }
     }
@@ -338,8 +335,8 @@ section#responsive {
       flex-direction: column;
       justify-content: space-around;
       .dot {
-        width: 4rem;
-        height: 4rem;
+        width: 6rem;
+        height: 6rem;
         border-radius: 50%;
         display: flex;
         justify-content: center;
@@ -347,16 +344,15 @@ section#responsive {
 
         color: #4f4f4f;
         border: none;
-        background: #242432;
+        background: $color-primary;
         box-shadow: 10px 10px 20px #171721, -10px -10px 20px #313144;
         &.active {
           // background-color: $color-primary;
           background: radial-gradient(#e96443 20%, #5f3562 70%);
-          // color: white;
           color: floralwhite;
         }
         span {
-          font-size: 2rem;
+          font-size: 3.2rem;
         }
       }
     }
@@ -416,7 +412,7 @@ section#footer {
       border: none;
       cursor: pointer;
       span {
-        font-size: 4rem;
+        font-size: 4.5rem;
       }
     }
     img {
@@ -480,6 +476,7 @@ section#footer {
         max-width: 120px;
         object-fit: cover;
       }
+
     }
   }
 
@@ -504,7 +501,7 @@ section#footer {
     }
     span {
       top: 3%;
-      font-size: 1.1rem;
+      font-size: 1.5rem;
       &::before {
         width: 350%;
         top: 25px;
@@ -533,7 +530,7 @@ section#footer {
       p {
         width: 100%;
         padding: 10%;
-        font-size: 18px;
+        font-size: 1.8rem;
       }
     }
 
@@ -550,7 +547,7 @@ section#footer {
       margin-left: initial;
       padding: 10%;
       li {
-        font-size: 18px;
+        font-size: 1.8rem;
       }
     }
       h3 {
@@ -566,7 +563,7 @@ section#footer {
     #siteImagesText {
       width: 100%;
       h3 {
-        font-size: clamp(30px, 3rem, 7vw);
+        font-size: clamp(30px, 3.5rem, 7vw);
         margin: 4% 7%;
       }
       .sliderNav {
@@ -587,7 +584,7 @@ section#footer {
           top: 0;
           height: fit-content;
           width: 100%;
-          font-size: 30px;
+          font-size: 3rem;
         }
       }
       .slider-dots {
