--- a/src/app/shared/menu/menu.component.scss
+++ b/src/app/shared/menu/menu.component.scss
@@ -25,7 +25,7 @@ $animationTime: 0.7s;
     }
     &:checked ~ label#menuIcon {
       span {
-        background-color: #242432;
+        background-color: $color-primary;
         &::before {
           animation: menuIconAnimationTop $animationTime forwards ease-in-out;
         }
@@ -74,7 +74,7 @@ $animationTime: 0.7s;
     width: 50px;
     height: 50px;
     border-radius: 50%;
-    background-color: #242432;
+    background-color: $color-primary;
     box-shadow: 0px 0px 15px #7e6a84;
     display: flex;
     justify-content: center;
@@ -138,7 +138,6 @@ $animationTime: 0.7s;
 
     opacity: 0;
     transform: scale(0);
-    // transition: transform 0.5s ease-in-out, opacity 0.2s 0.5s ease-in;
     ul {
       height: 100%;
       display: flex;
@@ -146,15 +145,30 @@ $animationTime: 0.7s;
       justify-content: space-around;
 
       li {
+        width: fit-content;
         list-style: none;
         text-transform: uppercase;
-        font-size: clamp(16px, 6rem, 12vw);
+        font-size: clamp(16px, 8rem, 12vw);
+        position: relative;
         cursor: pointer;
+
 
         a {
           text-decoration: none;
           color: white;
           font-family: $font-titles;
+          &::after {
+            content: "";
+            background: white;
+            width: 100%;
+            height: 100%;
+            transform: scaleX(0);
+            display: block;
+            position: absolute;
+            inset: 0;
+            z-index: -1;
+            transition: transform 0.4s;
+          }
           &.router-link-active {
             color: #e49ea2;
             cursor: default;
@@ -164,6 +178,21 @@ $animationTime: 0.7s;
       }
     }
   }
+
+  @media (hover: hover) {
+    nav {
+      ul {
+        a:not(.router-link-active):hover {
+          color: #b45672;
+          &::after {
+            transform: scaleX(1);
+          }
+        }
+      }
+    }
+  }
+
+
   @keyframes menuAnimation {
     0% {
       opacity: 0;
