--- a/src/app/projects/projects.component.html
+++ b/src/app/projects/projects.component.html
@@ -45,7 +45,7 @@
         </div>
         <div class="cardButtons">
           <button [routerLink]="['/portfolio', project.path]" class="projectButtons" type="button"><span class="material-icons">visibility</span> <span class="text project"></span></button>
-          <button class="projectButtons" type="button"><a href="{{project.url}}" target="_blank" class="siteLinks"><span class="material-icons">reply</span> <span class="text site"></span></a></button>
+          <button class="projectButtons" type="button"><a href="{{project.url}}" target="_blank" class="siteLinks"> <span class="text site"></span><span class="material-icons">reply</span></a></button>
         </div>
         <div class="cardButtonsSmallScreens">
           <button [routerLink]="['/portfolio', project.path]" class="projectButtons" type="button">Les détails</button>
