--- a/src/app/shared/menu/menu.component.scss
+++ b/src/app/shared/menu/menu.component.scss
@@ -1,6 +1,7 @@
 @import "./../../../styles.scss";
 
 $animationTime: 0.7s;
+$halfAnimationTime: calc($animationTime/2);
 
 :host {
   position: relative;
@@ -21,7 +22,7 @@ $animationTime: 0.7s;
       transform: scale(100);
     }
     &:checked ~ nav {
-      animation: menuAnimation $animationTime/2 forwards ease-in-out;
+      animation: menuAnimation $halfAnimationTime forwards ease-in-out;
     }
     &:checked ~ label#menuIcon {
       span {
@@ -88,7 +89,7 @@ $animationTime: 0.7s;
       height: 2px;
       background-color: white;
       position: relative;
-      transition: all $animationTime/2 ease-in-out;
+      transition: all $halfAnimationTime ease-in-out;
     }
     span.line::before, span.line::after {
       content: "";
@@ -123,7 +124,7 @@ $animationTime: 0.7s;
     opacity: 0;
     animation: showMenuAnimation 0.2s $animationTime ease-in-out forwards;
 
-    transition: transform $animationTime/2 ease-in-out;
+    transition: transform $halfAnimationTime ease-in-out;
   }
 
   nav {
@@ -163,11 +164,12 @@ $animationTime: 0.7s;
             width: 100%;
             height: 100%;
             transform: scaleX(0);
+            opacity: 0;
             display: block;
             position: absolute;
             inset: 0;
             z-index: -1;
-            transition: transform 0.4s;
+            transition: all 0.2s;
           }
           &.router-link-active {
             color: #e49ea2;
@@ -186,6 +188,7 @@ $animationTime: 0.7s;
           color: #b45672;
           &::after {
             transform: scaleX(1);
+            opacity: 1;
           }
         }
       }
